--- a/main.html
+++ b/main.html
@@ -3,14 +3,18 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <!-- the entire body must be written by student -->
+  <h4 id="question">What is the captial of India?</h4>
+  <input type="radio" name="question" id="q1" value="q1">
+  <label for="q1">New Delhi</label> <br>
+  <input type="radio" name="question" id="q1" value="q2">
+  <label for="q2">Mumbai</label>
+  <blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
