--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
   <label for="q1">New Delhi</label> <br>
   <input type="radio" name="question" id="q1" value="q2">
   <label for="q2">Mumbai</label>
-  <blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+  <blockquote cite="www.GeeksForGeeks.org.in">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
   <script type="text/javascript" src="./script.js"></script>
 </body>
 
